samples/_failures_safe/1761325444_6292c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_344b102e.c: In function ‘pointcloud_add_point’:
./samples/SAFE/__tmp_344b102e.c:143: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_344b102e.c:142:12: note: to match this ‘(’
  142 |         if (new_points == NULL
      |            ^
./samples/SAFE/__tmp_344b102e.c:142:9: error: expected declaration or statement at end of input
  142 |         if (new_points == NULL
      |         ^~
./samples/SAFE/__tmp_344b102e.c:142:9: error: expected declaration or statement at end of input
